chore: move release checklist to logs and fix date to 2026-01-04

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,9 @@
 # 技術決策紀錄（專案特定）
 .uadp/logs/decisions.md
 
+# 保留發布檢查清單（框架資產）
+!.uadp/logs/release_v1.0_checklist.md
+
 # ============================================
 # 保留的核心框架資產（不應被忽略）
 # ============================================
